# haskell-club

./: .gitignore  README.md  dot-emacs.el
code/: Foo.hs
code/2016-05-20/: split.hs
code/2016-06-03/: rle.hs
code/2016-07-01/: rational.hs
code/2016-07-29/: a-a-sort.hs  tom-andrea-sam.hs
code/2016-10-14/: functor_and_applicative_on_function_and_either.hs
code/2016-10-28/: validation.hs
code/2016-11-11/: monoids.hs
code/2016-11-18/: queens.hs  usingmodule.hs
code/2016-11-25/: countdown.hs
code/2016-12-16/: dropEveryTom.hs
code/2017-01-13/: NaveedAlexC_length_take_reverse.hs  bruce_length_take_reverse.hs  tom_non_foldy_solutions.hs
code/2017-01-27/: Naveed_fold_practice.hs
code/2017-02-10/: triple.hs
code/2017-02-24/: length.hs  miniumum_of_3.hs
code/Session3/: dojo.hs
code/Session4/: dojo.hs
code/Session8/: Functors.hs
code/Session9/: foo.hs
code/pandamonium/: .gitignore  README.md  panda.sh  pandamonium.cabal  play.sh  profile.sh  stack.yaml  thrust.sh
code/pandamonium/app/: Main.hs
code/pandamonium/resources/sprites/: craft.xcf  pandawalk.aseprite
code/pandamonium/src/: Assets.hs  Ball.hs  Block.hs  CollisionHandler.hs  Collisions.hs  Controller.hs  CreateWorld.hs  Entity.hs  GameEvent.hs  Gravity.hs  Integrator.hs  Movable.hs  Paddle.hs  Player.hs  Redux.hs  Renderable.hs  Score.hs  Shape.hs  TestLogging.hs  Timer.hs  Updatable.hs  Vector.hs  World.hs  scratch.hs
code/pandamonium/src/Balls/Entities/: Ball.hs  EBall.hs  Entities.hs  EntityTypes.hs
code/pandamonium/src/Balls/World/: World.hs
code/pandamonium/src/Bomberman/: Bomb.hs  Bomberman.hs  Controller.hs  Game.hs  Grid.hs
code/pandamonium/src/Collisions/: Shape.hs
code/pandamonium/src/Common/: Components.hs  Exit.hs  Framerate.hs  Monad.hs  Redux.hs  Redux2.hs  Relationship.hs  Renderable.hs  Timer.hs
code/pandamonium/src/Common/Components/: Acceleration.hs  Components.hs  Controls.hs  Destroyer.hs  Entity.hs  Lifecycle.hs  Physics.hs  Position.hs  Renderer.hs  Trigger.hs  Velocity.hs  World.hs
code/pandamonium/src/Common/Controls/: Axis.hs  Button.hs
code/pandamonium/src/Common/Entities/: Block.hs  Destroyer.hs  Entity.hs  Spawner.hs
code/pandamonium/src/Common/Entities/TypeClasses/: Physics.hs  Shapes.hs
code/pandamonium/src/Common/Graphics/: SpriteSheet.hs
code/pandamonium/src/Common/Physics/: Bounce.hs  Collisions.hs  Physics.hs
code/pandamonium/src/Common/Shapes/: Collisions.hs  Movables.hs  Renderables.hs  Shape.hs  Shapes.hs
code/pandamonium/src/Entities/: Ball.hs  Block.hs  Coin.hs  Jumpman.hs  Paddle.hs  Panda.hs  Player.hs  Thruster.hs
code/pandamonium/src/Entities/Panda/: Animation.hs  Collisions.hs  Jump.hs  Movement.hs  MovementStateMachine.hs  Panda.hs  Run.hs
code/pandamonium/src/Fireworks/: Assets.hs  Game.hs  World.hs
code/pandamonium/src/Fireworks/Entities/: Panda.hs  Rocket.hs  Sparkle.hs
code/pandamonium/src/Game/: Game.hs  GameEvent.hs  Timer.hs
code/pandamonium/src/Graphics/: SpriteSheet.hs
code/pandamonium/src/Panda2/: Assets.hs  Controller.hs  Game.hs  Session.hs  Stage.hs  World.hs
code/pandamonium/src/Panda2/Entities/: Block.hs  Panda.hs
code/pandamonium/src/Pandamonium/: Redux.hs  Renderable.hs
code/pandamonium/src/Pandamonium/Entities/: Block.hs  Coin.hs  EntityTypes.hs  Panda.hs
code/pandamonium/src/Pandamonium/Entities/Panda/: Animation.hs  Collisions.hs  Jump.hs  MovementStateMachine.hs  Panda.hs  Run.hs
code/pandamonium/src/Pandamonium/Game/: Game.hs  GameEvent.hs  Score.hs  Timer.hs
code/pandamonium/src/Pandamonium/Graphics/: SpriteSheet.hs
code/pandamonium/src/Pandamonium/Shapes/: Collisions.hs  Movables.hs  Renderables.hs  Shape.hs  Shapes.hs
code/pandamonium/src/Pandamonium/Systems/: Bouncy.hs  Controller.hs  GenericBouncy.hs  Physics.hs
code/pandamonium/src/Pandamonium/World/: Assets.hs  CreateWorld.hs  Stage.hs  World.hs
code/pandamonium/src/Pandamonium/World/Stages/: Stage1.hs  Stage2.hs
code/pandamonium/src/Shapes/: Collisions.hs  Datatypes.hs  Movables.hs  Polygon.hs  Renderables.hs  Shape.hs  Shapes.hs
code/pandamonium/src/Shapes/Collisions/: CircleCollisions.hs  CollisionClass.hs  Collisions.hs  PolygonCollisions.hs  RectangleCollisions.hs
code/pandamonium/src/Systems/: Controller.hs  Physics.hs
code/pandamonium/src/Thrust/: Redux.hs  Renderable.hs
code/pandamonium/src/Thrust/Entities/: Block.hs  Thruster.hs
code/pandamonium/src/Thrust/Game/: Game.hs  GameEvent.hs  Timer.hs
code/pandamonium/src/Thrust/Graphics/: SpriteSheet.hs
code/pandamonium/src/Thrust/Shapes/: Collisions.hs  Movables.hs  Renderables.hs  Shape.hs  Shapes.hs
code/pandamonium/src/Thrust/Systems/: Controller.hs
code/pandamonium/src/Thrust/World/: Assets.hs  CreateWorld.hs  World.hs
code/pandamonium/src/World/: Assets.hs  CreateWorld.hs  GameEvent.hs  Stage.hs  World.hs
code/pandamonium/src/World/Stages/: Stage1.hs  Stage2.hs
code/pandamonium/test/: CircleCollisions.hs  CollisionAssertions.hs  Generators.hs  RectangleCollisions.hs  ShapeCollisions.hs  ShapeTest.hs  Spec.hs  Test.hs
code/pandamonium/test/Bomberman/: BombTest.hs
code/pandamonium/test/Components/: ComponentTest.hs  EntityTest.hs
code/pandamonium/test/Redux/: ReduxTest.hs  TimerTest.hs
code/pandamonium/test/Shapes/: CircleCollisions.hs  CollisionAssertions.hs  Generators.hs  PolygonCollisions.hs  RectangleCollisions.hs  ShapeCollisions.hs
old-haskell-club/: HaskellClubTheFirst-README.md
problem-ideas/: chess-board-problem.md
(+70 files in other folders)
