name:                pandamonium
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/githubuser/pandamonium#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/githubuser/pandamonium#readme>

library
  hs-source-dirs:      src

  exposed-modules:     Common.Renderable
                     , Common.Redux
                     , Common.Exit
                     -- exposed thrust components
                     , Thrust.World.Assets
                     , Thrust.World.CreateWorld
                     , Thrust.Game.Game
                     -- exposed pandamonium components
                     , Pandamonium.World.Assets
                     , Pandamonium.World.CreateWorld
                     , Pandamonium.Game.Game
                     , Pandamonium.World.Stages.Stage1
                     , Pandamonium.World.Stages.Stage2
                     -- exposed balls components
                     , Balls.World.World
                     -- exposed fireworks components
                     , Fireworks.World
                     -- exposed for test
                     , Common.Components.Entity
                     , Common.Shapes.Shape
                     , Common.Timer

  other-modules:       Common.Relationship
                     , Common.Shapes.Shapes
                     , Common.Shapes.Collisions
                     , Common.Shapes.Movables
                     , Common.Shapes.Renderables
                     , Common.Graphics.SpriteSheet
                     , Common.Components.Renderer
                     , Common.Components.Position
                     , Common.Components.Velocity
                     , Common.Components.Acceleration
                     , Common.Entities.Entity
                     , Common.Entities.Destroyer
                     , Common.Entities.Spawner
                     , Common.Entities.TypeClasses.Shapes
                     , Common.Entities.TypeClasses.Physics
                     , Common.Entities.Block
                     , Common.Physics.Physics
                     , Common.Physics.Collisions
                     -- thrust modules
                     , Thrust.Game.GameEvent
                     , Thrust.Systems.Controller
                     , Thrust.Entities.Thruster
                     , Thrust.World.World
                     -- pandamonium modules
                     , Pandamonium.Game.GameEvent
                     , Pandamonium.Game.Score
                     , Pandamonium.Systems.Controller
                     , Pandamonium.Entities.EntityTypes
                     , Pandamonium.Entities.Panda
                     , Pandamonium.Entities.Panda.Panda
                     , Pandamonium.Entities.Panda.MovementStateMachine
                     , Pandamonium.Entities.Panda.Collisions
                     , Pandamonium.Entities.Panda.Jump
                     , Pandamonium.Entities.Panda.Run
                     , Pandamonium.Entities.Panda.Animation
                     , Pandamonium.Entities.Coin
                     , Pandamonium.World.World
                     , Pandamonium.World.Stage
                     -- ball modules
                     , Balls.Entities.Ball
                     , Balls.Entities.EntityTypes
                     -- fireworks
                     , Fireworks.Entities.Rocket


  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , bmp
                     , lens
                     , mtl
                     , dlist
                     , bytestring
                     , constrained-dynamic
  default-language:    Haskell2010

executable pandamonium-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bmp
                     , gloss
                     , pandamonium
  default-language:    Haskell2010

test-suite pandamonium-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:       Shapes.CircleCollisions
                     , Shapes.CollisionAssertions
                     , Shapes.Generators
                     , Shapes.RectangleCollisions
                     , Shapes.PolygonCollisions
                     , Redux.ReduxTest
                     , Redux.TimerTest
                     , Components.ComponentTest
  build-depends:       base
                     , gloss
                     , lens
                     , HTF
                     , HUnit
                     , QuickCheck
                     , pandamonium
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/pandamonium
